# Lulada

./: CMakeLists.txt  README.md
cmake/: Element.cmake
include/element/: datapath.hpp  devices.hpp  engine.hpp  node.h  node.hpp  plugins.hpp  session.hpp  settings.hpp  tags.hpp  ui.hpp
include/element/ui/: commands.hpp  mainwindow.hpp  standard.hpp  style.hpp
src/: CMakeLists.txt  application.cpp  context.cpp  datapath.cpp  devicemanager.cpp  main.cc  messages.cpp  messages.hpp  node.cpp  pluginmanager.cpp  pluginprocessor.cpp  services.cpp  session.cpp  settings.cpp  utils.cpp  utils.hpp
src/dsp/: quantize_ops.cpp  quantize_ops.hpp  quantize_options.cpp  quantize_options.hpp
src/dsp/automation/: automation_point.hpp  automation_region.cpp  automation_region.hpp  automation_track.cpp  automation_track.hpp  curve.cpp  curve.hpp  parameter_change_tracker.hpp
src/engine/: audioengine.cpp  graphbuilder.cpp  graphbuilder.hpp  graphmanager.cpp  graphmanager.hpp  graphnode.cpp  graphnode.hpp  internalformat.cpp  ionode.cpp  jack.cpp  jack.hpp  mappingengine.cpp  mappingengine.hpp  midiengine.cpp  midiengine.hpp  nodefactory.cpp  processor.cpp  rootgraph.cpp  rootgraph.hpp
src/engine/sampler/: ft2_audio.h  ft2_audio_stub.c  ft2_mix.c  ft2_mix.h  ft2_mix_interpolation.c  ft2_mix_macros.h  ft2_mix_simd.c
src/engine/tracker/: mandy.c  mandy.h  midi_client.c  midi_client.h  midi_event.h  module.c  module.h  row.h  smf_stub.c  timeline.c  timeline.h  track.c  track.h  vht_types.h
src/lua/src/: ldo.c
src/nodes/: allpassfilter.hpp  audioclip.cpp  audioclip.hpp  audiofileplayer.cpp  audiomixer.cpp  audiorouter.hpp  channelize.hpp  colorbars.hpp  combfilter.hpp  compressor.cpp  compressoreditor.cpp  eqfilter.cpp  everb.hpp  freqsplitter.hpp  ionodeeditor.hpp  jackmidiinputallnode.hpp  jackmidiinputnode.hpp  jackmidioutputallnode.hpp  jackmidioutputnode.hpp  mcu.hpp  mediaplayer.cpp  midichannelmap.hpp  midichannelsplitter.hpp  mididevice.hpp  midiionodeinfopanel.hpp  midimonitor.hpp  midimonitoreditor.cpp  midiplayer.cpp  midiplayer.hpp  midiprogrammap.hpp  midirouter.hpp  midisetlist.hpp  oscreceiver.hpp  oscsender.hpp  oscsendereditor.cpp  sampler.cpp  sampler.hpp  scriptnode.cpp  scriptnodeeditor.cpp  scriptnodeeditor.hpp  (+7 more)
src/services/: arrangementtracksservice.cpp  arrangementtracksservice.hpp  diskopservice.hpp  engineservice.cpp  guiservice.cpp  samplebankpool.cpp  samplebankpool.hpp  sessionservice.cpp  sessionservice.hpp
src/services/audiostreaming/: audio_file.cpp  audio_file.hpp  audio_file_sf.cpp  audio_file_sf.hpp  audio_file_types.hpp  disk_stream.cpp  disk_stream.hpp  playback_ds.cpp  playback_ds.hpp  record_ds.cpp  record_ds.hpp
src/services/automation/: automation_engine.cpp  automation_engine.hpp  automation_target.hpp
src/services/sources/: audiofilesource.hpp  midi_source.cpp  midi_source.hpp  source.hpp  sourceregistry.cpp  sourceregistry.hpp  vhtsequencesource.hpp
src/services/timeline/: adapter.hpp  audiolaneadapter.cpp  audiolaneadapter.hpp  lane.cpp  lane.hpp  marker_track.cpp  marker_track.hpp  midi_note.hpp  midi_note_region.cpp  midi_note_region.hpp  playlist.cpp  playlist.hpp  region.cpp  region.hpp
src/ui/: aboutscreen.cpp  arrangementview.cpp  arrangementview.hpp  audiodeviceselector.cpp  audiodeviceselector.hpp  block.cpp  block.hpp  blocktoolbutton.hpp  buttons.cpp  buttons.hpp  categorycolors.hpp  connectiongrid.cpp  console.cpp  content.cpp  contextmenus.hpp  controllersview.cpp  diskopview.cpp  diskopview.hpp  fontcache.hpp  grapheditorcomponent.cpp  grapheditorview.cpp  graphmixerview.cpp  graphsettingsview.cpp  lanepalette.hpp  lcdsublabel.hpp  loglistbox.hpp  mainmenu.cpp  mainmenu.hpp  mainwindow.cpp  nativefilelist.cpp  nativefilelist.hpp  navigationsidebar.cpp  navigationsidebar.hpp  nodechannelstrip.hpp  nodechannelstripview.cpp  nodeeditorfactory.cpp  nodepropertiesview.cpp  nodepropertiesview.hpp  pluginmanagercomponent.cpp  pluginmanagercomponent.hpp  (+20 more)
src/ui/pianoroll/: midi_note_diff_command.cpp  midi_note_diff_command.hpp  note_drag.cpp  note_drag.hpp  pianoroll_grid.cpp  pianoroll_grid.hpp  pianoroll_keyboard.cpp  pianoroll_keyboard.hpp  pianoroll_view.cpp  pianoroll_view.hpp  quantize_dialog.cpp  quantize_dialog.hpp  velocity_lane.cpp  velocity_lane.hpp
test/: CMakeLists.txt  automationcurvetests.cpp  automationenginetests.cpp  automationtargettests.cpp  element_graph_render_golden.cpp  midi_clip_in_session_tests.cpp  midi_lane_tests.cpp  midi_note_region_tests.cpp  midi_source_tests.cpp  quantize_tests.cpp  session_view_tests.cpp  tracker_loop_tests.cpp
